--- a/house_price/house_price.ipynb
+++ b/house_price/house_price.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T06:02:01.415026Z",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T06:02:05.875531Z",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T04:36:30.622179Z",
@@ -80,7 +80,7 @@
        "(1460, 81)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T04:36:32.785866Z",
@@ -106,7 +106,7 @@
        "(1459, 80)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T04:36:35.045435Z",
@@ -128,206 +128,46 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>MSSubClass</th>\n",
-       "      <th>MSZoning</th>\n",
-       "      <th>LotFrontage</th>\n",
-       "      <th>LotArea</th>\n",
-       "      <th>Street</th>\n",
-       "      <th>Alley</th>\n",
-       "      <th>LotShape</th>\n",
-       "      <th>LandContour</th>\n",
-       "      <th>Utilities</th>\n",
-       "      <th>...</th>\n",
-       "      <th>PoolArea</th>\n",
-       "      <th>PoolQC</th>\n",
-       "      <th>Fence</th>\n",
-       "      <th>MiscFeature</th>\n",
-       "      <th>MiscVal</th>\n",
-       "      <th>MoSold</th>\n",
-       "      <th>YrSold</th>\n",
-       "      <th>SaleType</th>\n",
-       "      <th>SaleCondition</th>\n",
-       "      <th>SalePrice</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>8450</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>208500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>20</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>9600</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Reg</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>181500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>11250</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>223500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>70</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>9550</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Abnorml</td>\n",
-       "      <td>140000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>60</td>\n",
-       "      <td>RL</td>\n",
-       "      <td>84.0</td>\n",
-       "      <td>14260</td>\n",
-       "      <td>Pave</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IR1</td>\n",
-       "      <td>Lvl</td>\n",
-       "      <td>AllPub</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2008</td>\n",
-       "      <td>WD</td>\n",
-       "      <td>Normal</td>\n",
-       "      <td>250000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 81 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Id  MSSubClass MSZoning  LotFrontage  LotArea Street Alley LotShape  \\\n",
-       "0   1          60       RL         65.0     8450   Pave   NaN      Reg   \n",
-       "1   2          20       RL         80.0     9600   Pave   NaN      Reg   \n",
-       "2   3          60       RL         68.0    11250   Pave   NaN      IR1   \n",
-       "3   4          70       RL         60.0     9550   Pave   NaN      IR1   \n",
-       "4   5          60       RL         84.0    14260   Pave   NaN      IR1   \n",
-       "\n",
-       "  LandContour Utilities  ... PoolArea PoolQC Fence MiscFeature MiscVal MoSold  \\\n",
-       "0         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
-       "1         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      5   \n",
-       "2         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      9   \n",
-       "3         Lvl    AllPub  ...        0    NaN   NaN         NaN       0      2   \n",
-       "4         Lvl    AllPub  ...        0    NaN   NaN         NaN       0     12   \n",
-       "\n",
-       "  YrSold  SaleType  SaleCondition  SalePrice  \n",
-       "0   2008        WD         Normal     208500  \n",
-       "1   2007        WD         Normal     181500  \n",
-       "2   2008        WD         Normal     223500  \n",
-       "3   2006        WD        Abnorml     140000  \n",
-       "4   2008        WD         Normal     250000  \n",
-       "\n",
-       "[5 rows x 81 columns]"
+       "count      1460.000000\n",
+       "mean     180921.195890\n",
+       "std       79442.502883\n",
+       "min       34900.000000\n",
+       "25%      129975.000000\n",
+       "50%      163000.000000\n",
+       "75%      214000.000000\n",
+       "max      755000.000000\n",
+       "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train.head()"
+    "train['SalePrice'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.       , 0.7909816],\n",
+       "       [0.7909816, 1.       ]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(train['SalePrice'], train['OverallQual'])"
    ]
   },
   {
@@ -363,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T08:12:36.972953Z",
@@ -470,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T06:04:12.614077Z",
@@ -500,6 +340,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### ID"
    ]
   },
@@ -596,6 +437,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### MSSubClass"
    ]
   },
@@ -757,6 +599,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### MSZoning"
    ]
   },
@@ -1000,6 +843,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### LotFrontage / LotArea"
    ]
   },
@@ -1279,6 +1123,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### Street / Alley"
    ]
   },
@@ -1505,6 +1350,123 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Grvl</th>\n",
+       "      <th>Pave</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1455</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1456</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1457</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1458</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1459</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1460 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Grvl  Pave\n",
+       "0        0     1\n",
+       "1        0     1\n",
+       "2        0     1\n",
+       "3        0     1\n",
+       "4        0     1\n",
+       "...    ...   ...\n",
+       "1455     0     1\n",
+       "1456     0     1\n",
+       "1457     0     1\n",
+       "1458     0     1\n",
+       "1459     0     1\n",
+       "\n",
+       "[1460 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.get_dummies(train['Street'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "hidden": true
@@ -1535,6 +1497,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### LotShape"
    ]
   },
@@ -1749,6 +1712,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### LandContour"
    ]
   },
@@ -1961,6 +1925,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### Utilities"
    ]
   },
@@ -2092,6 +2057,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### !!! LotConfig"
    ]
   },
@@ -2282,6 +2248,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### LandSlope"
    ]
   },
@@ -2496,6 +2463,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### !!! Neighborhood"
    ]
   },
@@ -2735,6 +2703,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### !!! Condition1/2"
    ]
   },
@@ -2997,6 +2966,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### BldgType"
    ]
   },
@@ -3240,6 +3210,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### HouseStyle"
    ]
   },
@@ -3492,6 +3463,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### OverallQual / OverallCond"
    ]
   },
@@ -3694,6 +3666,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### YearBuilt / YearRemodAdd"
    ]
   },
@@ -3958,6 +3931,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### RoofStyle / RoofMatl"
    ]
   },
@@ -4293,6 +4267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "----------------------------------\n",
     "### Exterior1st / Exterior2nd"
    ]
   },
@@ -4365,6 +4340,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -4455,6 +4431,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -4545,6 +4522,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -4635,6 +4613,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -4725,6 +4704,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -4815,6 +4795,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -4905,6 +4886,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -4995,6 +4977,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5085,6 +5068,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5175,6 +5159,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5265,6 +5250,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5355,6 +5341,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5445,6 +5432,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5535,6 +5523,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5625,6 +5614,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5715,6 +5705,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5805,6 +5796,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5895,6 +5887,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -5985,6 +5978,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -6075,6 +6069,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -6165,6 +6160,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -6255,6 +6251,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -6345,6 +6342,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -6435,6 +6433,7 @@
     "heading_collapsed": true
    },
    "source": [
+    "----------------------------------\n",
     "### feature"
    ]
   },
@@ -6552,6 +6551,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
