feat: Classify features
Classify features into my categories to preprocess datas.

--- a/house_price/house_price.ipynb
+++ b/house_price/house_price.ipynb
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 393,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T06:05:09.803072Z",
@@ -3181,7 +3181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 394,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-06T08:07:08.003233Z",
@@ -5512,7 +5512,7 @@
    },
    "source": [
     "----------------------------------\n",
-    "### feature"
+    "### Functional"
    ]
   },
   {
@@ -5613,97 +5613,6 @@
    "source": [
     "feature_extra.append('Functional')"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "----------------------------------\n",
-    "### feature"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 의견"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 데이터 확인"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 결측치 확인"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 분류"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5864,7 +5773,7 @@
    },
    "source": [
     "----------------------------------\n",
-    "### GarageType"
+    "### Garage"
    ]
   },
   {
@@ -5873,7 +5782,17 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- 차고에 관한 항목들"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 275,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Garage = ['GarageType', 'GarageYrBlt', 'GarageFinish',\n",
+    "'GarageCars', 'GarageArea', 'GarageQual', 'GarageCond', 'PavedDrive']"
    ]
   },
   {
@@ -5891,7 +5810,10 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- one-hot : Type, PavedDrive\n",
+    "- discrete : YrBlt, Cars\n",
+    "- mapping : Finish, Qual, Cond\n",
+    "- raw : Area"
    ]
   },
   {
@@ -5905,12 +5827,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 314,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#val_count('GarageCars')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5918,17 +5842,50 @@
     "hidden": true
    },
    "source": [
-    "#### 결측치 확인"
+    "#### 결측치 확인\n",
+    "- Type, YrBlt, Finish, Qual, Cond에 차고가 없는 경우 결측이 들어가있음.\n",
+    "- 'NA' 혹은 0으로 데이터 형태에 맞게 채워주기\n",
+    "- Cars/Area의 결측 하나는 0으로"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 322,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for feat in ['GarageType', 'GarageFinish', 'GarageQual', 'GarageCond']:\n",
+    "    train[feat].fillna('NA', inplace=True)\n",
+    "    test[feat].fillna('NA', inplace=True)\n",
+    "for feat in ['GarageYrBlt', 'GarageCars', 'GarageArea']:\n",
+    "    train[feat].fillna(0, inplace=True)\n",
+    "    test[feat].fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 매핑\n",
+    "- Finish 는 NA, Unf, Rfn, Fin 순으로\n",
+    "- Qual, Cond 는 하던대로"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_fin = {'NA':0, 'Unf':1, 'RFn':2, 'Fin':3}\n",
+    "map_qual = {'NA':0, 'Po':1, 'Fa':2, 'TA':3, 'Gd':4, 'Ex':5}\n",
+    "for dataset in [train, test]:\n",
+    "    dataset['GarageFinish'] = dataset['GarageFinish'].map(map_fin)\n",
+    "    for feat in ['GarageQual', 'GarageCond']:\n",
+    "        dataset[feat] = dataset[feat].map(map_qual)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5941,12 +5898,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 288,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_onehot.extend(['GarageType', 'PavedDrive'])\n",
+    "feature_dis.extend(['GarageYrBlt', 'GarageCars'])\n",
+    "feature_map.extend(['GarageFinish', 'GarageQual', 'GarageCond'])\n",
+    "feature_raw.append('GarageArea')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -5955,7 +5917,7 @@
    },
    "source": [
     "----------------------------------\n",
-    "### feature"
+    "### Extra Areas"
    ]
   },
   {
@@ -5964,7 +5926,16 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- 실외 부가적인 공간들의 넓이(Deck, Porch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex_area = ['WoodDeckSF', 'OpenPorchSF', 'EnclosedPorch', '3SsnPorch', 'ScreenPorch']"
    ]
   },
   {
@@ -5982,7 +5953,7 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- 전부 면적 값이므로 그대로 넣기 / normalize 고민"
    ]
   },
   {
@@ -5991,35 +5962,9 @@
     "hidden": true
    },
    "source": [
-    "#### 데이터 확인"
+    "#### 결측치 확인\n",
+    "- 없음!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 결측치 확인"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -6032,12 +5977,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 328,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_raw.extend(ex_area)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6046,7 +5993,7 @@
    },
    "source": [
     "----------------------------------\n",
-    "### feature"
+    "### Pool, Fence, Misc"
    ]
   },
   {
@@ -6055,7 +6002,7 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- 수영장, 펜스, 그 외 추가적인 feature들"
    ]
   },
   {
@@ -6073,7 +6020,9 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- PoolArea랑 QC를 동시에 반영? (곱한다거나)\n",
+    "- 일단 Area는 면적이니까 raw / PoolQC, Fence는 mapping\n",
+    "- MiscFeature의 종류가 중요할까? 가격이 있으니까 지우는걸로.."
    ]
   },
   {
@@ -6087,12 +6036,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 336,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- MiscFeature -----\n",
+      "---- train ----\n",
+      "Shed    49\n",
+      "Gar2     2\n",
+      "Othr     2\n",
+      "TenC     1\n",
+      "Name: MiscFeature, dtype: int64\n",
+      "---- test ----\n",
+      "Shed    46\n",
+      "Gar2     3\n",
+      "Othr     2\n",
+      "Name: MiscFeature, dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_count('MiscFeature')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6100,17 +6071,42 @@
     "hidden": true
    },
    "source": [
-    "#### 결측치 확인"
+    "#### 결측치 확인\n",
+    "- Pool, Fence가 없는경우 'NA'로 바꿔주기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 341,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "for dataset in [train, test]:\n",
+    "    for feat in ['PoolQC', 'Fence']:\n",
+    "        dataset[feat].fillna('NA', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 매핑"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_qual = {'NA':0, 'Po':1, 'Fa':2, 'TA':3, 'Gd':4, 'Ex':5}\n",
+    "map_fence = {'NA':0, 'MnWw':1, 'GdWo':2, 'MnPrv':3, 'GdPrv':4}\n",
+    "for dataset in [train, test]:\n",
+    "    dataset['PoolQC'] = dataset['PoolQC'].map(map_qual)\n",
+    "    dataset['Fence'] = dataset['Fence'].map(map_fence)    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6123,12 +6119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 344,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_raw.extend(['PoolArea', 'MiscVal'])\n",
+    "feature_map.extend(['PoolQC', 'Fence'])\n",
+    "feature_del.append('MiscFeature')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6137,7 +6137,7 @@
    },
    "source": [
     "----------------------------------\n",
-    "### feature"
+    "### MoSold / YrSold"
    ]
   },
   {
@@ -6146,7 +6146,7 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- 팔린 월/년도"
    ]
   },
   {
@@ -6164,7 +6164,8 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- discrete\n",
+    "- 년도 normalize / 둘을 합쳐야할지 각각 반영해야 할지?"
    ]
   },
   {
@@ -6178,12 +6179,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 350,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- YrSold -----\n",
+      "---- train ----\n",
+      "2009    338\n",
+      "2007    329\n",
+      "2006    314\n",
+      "2008    304\n",
+      "2010    175\n",
+      "Name: YrSold, dtype: int64\n",
+      "---- test ----\n",
+      "2007    363\n",
+      "2008    318\n",
+      "2009    309\n",
+      "2006    305\n",
+      "2010    164\n",
+      "Name: YrSold, dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_count('YrSold')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6191,17 +6217,9 @@
     "hidden": true
    },
    "source": [
-    "#### 결측치 확인"
+    "#### 결측치 확인\n",
+    "- 없음!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -6214,12 +6232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 354,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_dis.extend(['MoSold', 'YrSold'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6228,7 +6248,7 @@
    },
    "source": [
     "----------------------------------\n",
-    "### feature"
+    "### Sale Type / Condition"
    ]
   },
   {
@@ -6237,7 +6257,7 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- 거래 타입 / 조건"
    ]
   },
   {
@@ -6255,7 +6275,8 @@
     "hidden": true
    },
    "source": [
-    "- "
+    "- 순서가 있어보이지만, 애매한 부분이 있어서 일단 onehot 하기로\n",
+    "- 이거도 그래프 꼭 그려보기"
    ]
   },
   {
@@ -6269,12 +6290,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 361,
    "metadata": {
     "hidden": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----- SaleType -----\n",
+      "---- train ----\n",
+      "WD       1267\n",
+      "New       122\n",
+      "COD        43\n",
+      "ConLD       9\n",
+      "ConLw       5\n",
+      "ConLI       5\n",
+      "CWD         4\n",
+      "Oth         3\n",
+      "Con         2\n",
+      "Name: SaleType, dtype: int64\n",
+      "---- test ----\n",
+      "WD       1258\n",
+      "New       117\n",
+      "COD        44\n",
+      "ConLD      17\n",
+      "CWD         8\n",
+      "Oth         4\n",
+      "ConLI       4\n",
+      "Con         3\n",
+      "ConLw       3\n",
+      "Name: SaleType, dtype: int64 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "val_count('SaleType')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6282,17 +6336,20 @@
     "hidden": true
    },
    "source": [
-    "#### 결측치 확인"
+    "#### 결측치 확인\n",
+    "- test의 SaleType에 결측 한개 -> 최빈값 WD로 채우기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 362,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "test['SaleType'].fillna('WD', inplace=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6305,12 +6362,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 363,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "feature_onehot.extend(['SaleType', 'SaleCondition'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6319,296 +6378,50 @@
    },
    "source": [
     "----------------------------------\n",
-    "### feature"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 의견"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 데이터 확인"
+    "## 저장"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 403,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
-    "#### 결측치 확인"
+    "train.to_csv('data/train_pre1.csv')\n",
+    "test.to_csv('data/test_pre1.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 406,
    "metadata": {
     "hidden": true
    },
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
    "source": [
-    "#### 분류"
+    "feature_dict = {'raw':feature_raw, 'dis':feature_dis, \n",
+    "               'map':feature_map, 'onehot':feature_onehot,\n",
+    "                'extra':feature_extra, 'def':feature_del\n",
+    "               }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "execution_count": 413,
+   "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
    "source": [
-    "----------------------------------\n",
-    "### feature"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 의견"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 데이터 확인"
+    "#features = pd.DataFrame(feature_dict)\n",
+    "features = pd.DataFrame(dict([ (k,pd.Series(v)) for k,v in feature_dict.items() ]))\n",
+    "features.to_csv('data/feature_classification.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 결측치 확인"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 분류"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
-   "source": [
-    "----------------------------------\n",
-    "### feature"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 의견"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 데이터 확인"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 결측치 확인"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
-   "source": [
-    "#### 분류"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
