fix: Clear all outputs and add some message
Practice how to merge .ipynb files

--- a/house_price/house_price.ipynb
+++ b/house_price/house_price.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 데이터 불러오기"
    ]
@@ -16,8 +14,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-06T06:02:01.211203Z",
      "start_time": "2021-09-06T06:02:01.200237Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -34,8 +31,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-06T06:02:01.415026Z",
      "start_time": "2021-09-06T06:01:56.844Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -52,8 +48,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-06T06:02:05.875531Z",
      "start_time": "2021-09-06T06:02:05.770971Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -70,8 +65,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-06T04:36:30.622179Z",
      "start_time": "2021-09-06T04:36:30.603694Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -85,8 +79,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-06T04:36:32.785866Z",
      "start_time": "2021-09-06T04:36:32.766742Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -96,9 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train.info()"
@@ -107,9 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train['FullBath']"
@@ -122,8 +111,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-06T04:36:35.045435Z",
      "start_time": "2021-09-06T04:36:34.909734Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -133,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.corrcoef(train['SalePrice'], train['OverallQual'])"
@@ -254,7 +240,13 @@
     "    print('매핑 할 데이터 {}개: \\n'.format(len(feature_map)),feature_map,'\\n')\n",
     "    print('one-hot encoding 시킬 것 {}개: \\n'.format(len(feature_onehot)),feature_onehot,'\\n')\n",
     "    print('따로 봐야 할 것 {}개: \\n'.format(len(feature_extra)),feature_extra,'\\n')\n",
-    "    print('삭제할 것 {}개: \\n'.format(len(feature_del)),feature_del,'\\n')"
+    "    print('삭제할 것 {}개: \\n'.format(len(feature_del)),feature_del,'\\n')\n",
+    "    \n",
+    "def merge_practice():\n",
+    "    '''\n",
+    "    mergemerge\n",
+    "    '''\n",
+    "    return 'merge please'"
    ]
   },
   {
@@ -4167,6 +4159,57 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge Practice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-08T07:19:57.964323Z",
+     "start_time": "2021-09-08T07:19:57.961323Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Please"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Please"
+   ]
   }
  ],
  "metadata": {
