fix: merge practice

--- a/house_price/house_price.ipynb
+++ b/house_price/house_price.ipynb
@@ -240,13 +240,20 @@
     "    print('매핑 할 데이터 {}개: \\n'.format(len(feature_map)),feature_map,'\\n')\n",
     "    print('one-hot encoding 시킬 것 {}개: \\n'.format(len(feature_onehot)),feature_onehot,'\\n')\n",
     "    print('따로 봐야 할 것 {}개: \\n'.format(len(feature_extra)),feature_extra,'\\n')\n",
-    "    print('삭제할 것 {}개: \\n'.format(len(feature_del)),feature_del,'\\n')\n",
-    "    \n",
-    "def merge_practice():\n",
+    "    print('삭제할 것 {}개: \\n'.format(len(feature_del)),feature_del,'\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_prac():\n",
     "    '''\n",
-    "    mergemerge\n",
+    "    결과값이 보이는 채로 merge하고 싶다\n",
     "    '''\n",
-    "    return 'merge please'"
+    "    return merge"
    ]
   },
   {
@@ -4192,14 +4199,16 @@
    },
    "outputs": [],
    "source": [
-    "# Please"
+    "# Please merge"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Merge"
+    "merge-merge\n",
+    "merge in 1 file\n",
+    "i want to show our results"
    ]
   },
   {
@@ -4208,7 +4217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Please"
+    "#merge Please"
    ]
   }
  ],
