fix: merge practice

--- a/house_price/house_price.ipynb
+++ b/house_price/house_price.ipynb
@@ -244,7 +244,7 @@
     "    \n",
     "def merge_practice():\n",
     "    '''\n",
-    "    mergemerge\n",
+    "    a멀지merge results\n",
     "    '''\n",
     "    return 'merge please'"
    ]
@@ -4178,7 +4178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Merge Practice"
+    "## 3Merg2e 1Practice"
    ]
   },
   {
@@ -4192,14 +4192,14 @@
    },
    "outputs": [],
    "source": [
-    "# Please"
+    "# Please33221"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Merge"
+    "Result"
    ]
   },
   {
