--- a/house_price/house_price.ipynb
+++ b/house_price/house_price.ipynb
@@ -251,11 +251,8 @@
    "source": [
     "def merge_prac():\n",
     "    '''\n",
-<<<<<<< HEAD
     "    a멀지merge results\n",
-=======
     "    결과값이 보이는 채로 merge하고 싶다\n",
->>>>>>> practice
     "    '''\n",
     "    return merge"
    ]
@@ -4203,24 +4200,17 @@
    },
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "# Please33221"
-=======
+    "# Please33221",
     "# Please merge"
->>>>>>> practice
-   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
-    "Result"
-=======
+    "Result",
     "merge-merge\n",
     "merge in 1 file\n",
     "i want to show our results"
->>>>>>> practice
    ]
   },
   {
