feat: Modeling and predict prices
Modeling : RandomForestRegressor / XGBoost(incomplete).
Predict house price and submit.
fix some errors, typos, mistakes.

--- a/house_price/practice/EDA.ipynb
+++ b/house_price/practice/EDA.ipynb
@@ -3574,16 +3574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 232,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-10T06:21:02.583654Z",
-     "start_time": "2021-09-10T06:21:02.578670Z"
+     "end_time": "2021-09-10T07:18:49.895907Z",
+     "start_time": "2021-09-10T07:18:49.891920Z"
     }
    },
    "outputs": [],
    "source": [
-    "# 'BsmtFinType1', 'BsmtFinType2', 'BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF'"
+    "Bsmt = ['BsmtFinType1', 'BsmtFinType2',\n",
+    "        'BsmtFinSF1', 'BsmtFinSF2', 'BsmtUnfSF', 'TotalBsmtSF']"
    ]
   },
   {
@@ -3686,16 +3687,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 237,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-10T06:21:07.773918Z",
-     "start_time": "2021-09-10T06:21:07.768934Z"
+     "end_time": "2021-09-10T07:21:36.725967Z",
+     "start_time": "2021-09-10T07:21:36.718984Z"
     }
    },
    "outputs": [],
    "source": [
-    "# null_check('BsmtFinType1')"
+    "#null_check('TotalBsmtSF')\n",
+    "# for feat in Bsmt:\n",
+    "#     null_check(feat)\n",
+    "test['TotalBsmtSF'].fillna(0, inplace=True)"
    ]
   },
   {
@@ -6002,11 +6006,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 238,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-09-10T07:01:39.910554Z",
-     "start_time": "2021-09-10T07:01:39.695904Z"
+     "end_time": "2021-09-10T07:22:15.208090Z",
+     "start_time": "2021-09-10T07:22:15.006927Z"
     }
    },
    "outputs": [],
