코드 수정한 건 없는데 깃에 파일 수정됐다 떠서 일단 커밋 푸시는 합니다..# modfied
코드 수정한 건 없는데 깃에 파일 수정됐다 떠서 일단 커밋 푸시는 합니다..#
modfied

코드 수정한 건 없는데 깃에 파일 수정됐다 떠서 일단 커밋 푸시는 합니다..

--- a/house_price/modeling.ipynb
+++ b/house_price/modeling.ipynb
@@ -261,7 +261,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# XGBoost\n",
     "- 이건 아직 복붙해서 돌려본거라...\n",
@@ -276,7 +278,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.799066Z",
      "start_time": "2021-09-10T08:12:02.795077Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -304,7 +307,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.811044Z",
      "start_time": "2021-09-10T08:12:02.802059Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -324,7 +328,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.822011Z",
      "start_time": "2021-09-10T08:12:02.816022Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -343,7 +348,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.835969Z",
      "start_time": "2021-09-10T08:12:02.830982Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -361,7 +367,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.848946Z",
      "start_time": "2021-09-10T08:12:02.841953Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -376,7 +383,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.858906Z",
      "start_time": "2021-09-10T08:12:02.853922Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -390,7 +398,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.870877Z",
      "start_time": "2021-09-10T08:12:02.863894Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -401,7 +410,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# 앙상블"
    ]
@@ -409,7 +420,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
@@ -430,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
