--- a/house_price/EDA.ipynb
+++ b/house_price/EDA.ipynb
@@ -251,14 +251,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### ID"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 의견"
    ]
@@ -269,7 +273,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-06T06:24:54.937345Z",
      "start_time": "2021-09-06T06:24:54.930399Z"
-    }
+    },
+    "hidden": true
    },
    "source": [
     "그냥 아이디임.\n",
@@ -279,7 +284,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 데이터 확인"
    ]
@@ -291,7 +298,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:00.266624Z",
      "start_time": "2021-09-10T06:14:00.256652Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -300,7 +308,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 분류"
    ]
@@ -312,7 +322,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:04.329605Z",
      "start_time": "2021-09-10T06:14:04.324617Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -321,14 +332,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### MSSubClass"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- The building class  \n",
     "- 빌딩의 클래스?  "
@@ -337,7 +352,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "#### 의견\n",
@@ -347,7 +363,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 데이터 확인\n",
     "- 숫자가 크다고 무조건 좋지 않음 (ex 180)\n",
@@ -361,7 +379,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:11.052407Z",
      "start_time": "2021-09-10T06:14:10.819720Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -370,7 +389,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 결측치 확인\n",
     "- 결측치 없음"
@@ -378,7 +399,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 분류\n",
     "- 숫자가 크다고 가격이 커지는게 아니므로 one-hot"
@@ -391,7 +414,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:15.080930Z",
      "start_time": "2021-09-10T06:14:15.074978Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -400,14 +424,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "### MSZoning"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- The general zoning classification  \n",
     "- 주거구역 / 상업구역 등 집이 위치한 구역?을 나타냄."
@@ -415,14 +443,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 의견"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "- C, FV 생각하면 one-hot encoding 하고 싶음.\n",
     "- 근데 RL, RM, RH간에는 순서?가 있어 보여서..  \n",
@@ -434,7 +466,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 데이터 확인\n",
     "- RL -> RM -> RH 순으로 인구 밀집도가 높음.(얘네가 데이터의 대부분임)  \n",
@@ -448,7 +482,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:21.587744Z",
      "start_time": "2021-09-10T06:14:21.577397Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -462,7 +497,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:21.974084Z",
      "start_time": "2021-09-10T06:14:21.749493Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -471,7 +507,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 결측치 확인\n",
     "- test셋에 결측치 4개.\n",
@@ -485,7 +523,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:23.236084Z",
      "start_time": "2021-09-10T06:14:23.228146Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -499,7 +538,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:23.404633Z",
      "start_time": "2021-09-10T06:14:23.396654Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -509,7 +549,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 매핑\n",
     "- C, FV 생각하면 <span class=\"mark\">카테고라이즈</span> 하고 싶은데 근데 RL, RM, RH간에는 순서?가 있어 보여서..  \n",
@@ -524,7 +566,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:24.806430Z",
      "start_time": "2021-09-10T06:14:24.803157Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -536,7 +579,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "#### 분류\n",
     "- C 제외하고 one-hot"
@@ -549,7 +594,8 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T06:14:26.260674Z",
      "start_time": "2021-09-10T06:14:26.254718Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [],
    "source": [
@@ -5892,7 +5938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.8"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
