ipynb files are modified

--- a/house_price/modeling.ipynb
+++ b/house_price/modeling.ipynb
@@ -30,6 +30,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sklearn.__version__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-10T08:11:50.241776Z",
@@ -261,9 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# XGBoost\n",
     "- 이건 아직 복붙해서 돌려본거라...\n",
@@ -278,8 +285,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.799066Z",
      "start_time": "2021-09-10T08:12:02.795077Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -307,8 +313,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.811044Z",
      "start_time": "2021-09-10T08:12:02.802059Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -328,8 +333,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.822011Z",
      "start_time": "2021-09-10T08:12:02.816022Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -348,8 +352,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.835969Z",
      "start_time": "2021-09-10T08:12:02.830982Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -367,8 +370,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.848946Z",
      "start_time": "2021-09-10T08:12:02.841953Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -383,8 +385,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.858906Z",
      "start_time": "2021-09-10T08:12:02.853922Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -398,8 +399,7 @@
     "ExecuteTime": {
      "end_time": "2021-09-10T08:12:02.870877Z",
      "start_time": "2021-09-10T08:12:02.863894Z"
-    },
-    "hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -410,9 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "# 앙상블"
    ]
@@ -420,9 +418,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
