try regression with specific preprogressing

--- a/house_price/regression.ipynb
+++ b/house_price/regression.ipynb
@@ -164,6 +164,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f2c63c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmsle(np.expm1(test_set['SalePrice']),np.expm1(y_hat_1))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c9cdb30b",
    "metadata": {},
@@ -212,7 +222,7 @@
    "id": "e9b27f51",
    "metadata": {},
    "source": [
-    "# all columns"
+    "## all columns"
    ]
   },
   {
@@ -293,6 +303,14 @@
     "sub=pd.read_csv('data/sample_submission.csv')\n",
     "sub['SalePrice']=pred\n",
     "sub.to_csv('submission/OLS_1_0918.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03209f7c",
+   "metadata": {},
+   "source": [
+    "#The end#"
    ]
   }
  ],
