--- a/house_price/seosztt/preprocessing_seo.ipynb
+++ b/house_price/seosztt/preprocessing_seo.ipynb
@@ -454,25 +454,19 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "M=MinMaxScaler()\n",
-    "train[feature_raw]=M.fit_transform(train[feature_raw])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "M=MinMaxScaler()\n",
-    "test[feature_raw]=M.fit_transform(test[feature_raw])"
+    "MMS1=MinMaxScaler()\n",
+    "train[feature_raw]=MMS1.fit_transform(train[feature_raw])\n",
+    "\n",
+    "MMS2=MinMaxScaler()\n",
+    "test[feature_raw]=MMS2.fit_transform(test[feature_raw])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 109,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1244,13 +1238,6 @@
     "for i in feature_map:\n",
     "    temp=L.fit_transform(test[i])\n",
     "    test[i]=temp"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 분류별"
    ]
   },
   {
