--- a/house_price/seosztt/regression.ipynb
+++ b/house_price/seosztt/regression.ipynb
@@ -623,16 +623,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "971d6039",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.expm1(y_hat_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 81,
    "id": "fafd1dca",
    "metadata": {
@@ -746,7 +736,7 @@
    "id": "e9b27f51",
    "metadata": {},
    "source": [
-    "# all columns"
+    "## all columns"
    ]
   },
   {
@@ -871,6 +861,14 @@
     "sub=pd.read_csv('data/sample_submission.csv')\n",
     "sub['SalePrice']=pred\n",
     "sub.to_csv('submission/OLS_1_0918.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "961306fe",
+   "metadata": {},
+   "source": [
+    "#The end#"
    ]
   }
  ],
