practice various regressions

--- a/house_price/XGB_tuned_by_BayesianOptimization.ipynb
+++ b/house_price/XGB_tuned_by_BayesianOptimization.ipynb
@@ -178,12 +178,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94b2529f",
+   "cell_type": "markdown",
+   "id": "ed78241e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#The End#"
+   ]
   }
  ],
  "metadata": {
