--- a/house_price/seosztt/XGB_tuned_by_GridSearchCV.ipynb
+++ b/house_price/seosztt/XGB_tuned_by_GridSearchCV.ipynb
@@ -414,12 +414,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51bfd670",
+   "cell_type": "markdown",
+   "id": "0d902033",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#The End#"
+   ]
   }
  ],
  "metadata": {
